--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <footer>
         <p>Desenvolvido pelas alunas: Lívia e Lais</p>
     </footer>
+    <script src="perguntas.js"></script>
 </body>
 </html>
