--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
     <footer>
         <p>Desenvolvido pelas alunas: Lívia e Lais</p>
     </footer>
+    <script src="main.js"></script>
     <script src="perguntas.js"></script>
 </body>
 </html>
-
-<div class="conteudo-cartao">
-    <h3>categoria</h3>
-    <div class="pergunta-cartao">
-        <p>pergunta</p>
-    </div>
-    <div class="resposta-cartao">
-        <p>resposta</p>
-    </div>
-</div>
