--- a/pagina2.html
+++ b/pagina2.html
@@ -19,5 +19,16 @@
     </footer>
     <script src="pagina2.js"></script>
     <script src="perguntas.js"></script>
+    
 </body>
 </html>
+<div class="conteudo-cartao">
+    <h3>categoria</h3>
+    <div class="pergunta-cartao">
+        <p>pergunta</p>
+    </div>
+    <div class="resposta-cartao">
+        <p>resposta</p>
+    </div>
+
+</div>
